[metadata]
name = takanori-cli
version = attr: takanori_cli.__version__
description = Takanori commands for my automation tool.
long_description = file: README.md
long_description_content_type = text/markdown
author = Takanori Kishikawa
author_email = auratus.lemma@gmail.com
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 3

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  taka = takanori_cli.main:cli

[tool:pytest]
testpaths =
  tests
